# tomato_matlab

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL.m  LICENSE  README.md  RUNALLTESTS.m  SETUP.m  playground.m  playground2.m  playground_mex.m  tagtagtag.sh  tomatoMatlabExample.m  tomatoMatlabExample1.m  tomatoMatlabExample2.m  tomatoMatlabExample3.m  tomatoMatlabInstall.m  tomatoMatlabRunAllTests.m  tomatoMatlabSetup.m
cmake/: matlab_suffix_configuration.cmake  octave_download.cmake  octave_find.cmake  tomato_download.cmake
mat/: TomatoMatlabStruct.m  compare2maps.m  getTomatoExePath.m  isOctave.m  makeCircle.m  makeDataset.m  makeHeartMask.m  redblue.m  saveImages2Dicom.m  scriptMakeT1dataset.m  scriptMakeT2dataset.m  setTomatoExePath.m  tomatoMatlabFunction.m  tomatoMatlabGetInputImagesFromYaml.m  tomatoMatlabYaml.m
mex/: playground.cpp
mexcpp/: playground.cpp
octaveOnly/: import.m
other/: tagtagtag.sh
testData/: tomatoConfig_Shmolli_inputFilePathsOctave.yaml
testData/dicomT1/map/: map0001.dcm
testData/dicomT1/raw/: image0001.dcm  image0002.dcm  image0003.dcm  image0004.dcm  image0005.dcm  image0006.dcm
testData/dicomT2/map/: map0001.dcm
testData/dicomT2/raw/: image0001.dcm  image0002.dcm  image0003.dcm  image0004.dcm  image0005.dcm  image0006.dcm  image0007.dcm  image0008.dcm  image0009.dcm  image0010.dcm  image0011.dcm
tests/: getGlobalTestFilesList.m  isOctave.m  playground_octave_mexTest.m  playground_xxx_mexTest.m  readStructTest.m  runtests_konrad.m  setGlobalTestFilesList.m
